tests/NormalTests/paczka1/fuzzy1/60824727.err
Error in line 2: 5haRJzCEIN A646 9,1
Error in line 5: QAfh S346 11,0
Error in line 1: jsx9N A21 87,3
Error in line 12: jsx9N A646 4®,6
Error in line 3: 5haRJzCEIN S346 94,8
